--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <nav></nav>
-    <header></header>
+    <nav>
+        <ul>
+            <a href=""><span>GS</span><span>CHOI</span></a>
+            <li><a href="">About</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+    <header>
+        <div class="title">
+
+        </div>
+    </header>
     <section id="about">
 
     </section>
